# pydantic_test

./: README.md  pyproject.toml
shiny/: __init__.py  try_basket.py  up.py
shiny/define/: __init__.py  schema_basket.py  schema_fruit.py  type.py
