[tool.poetry]
name = "shiny"
version = "0.1.0"
description = ""
authors = ["Tovva Kowalt <go.toba@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.1"

[tool.poetry.dev-dependencies]
mypy = "^0.740"

[tool.poetry.scripts]
up = "shiny:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

